--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -3,60 +3,85 @@ on:
   push:
     branches:
       - "**"
-#on:
-#  pull_request:
-#    branches:
-#      - "**"
-
-#jobs:
-#  #CI
-#    build_android:
-#      name: Building Android
-#      runs-on: ubuntu-latest
-#      steps:
-#        - name: Checkout code
-#          uses: actions/checkout@v2
-#        - name: Setup Java
-#          uses: actions/setup-java@v1
-#          with:
-#            java-version: 11
-#        - name: Decrypt Android keys
-#          run: sh ./.github/scripts/decrypt_android_secrets.sh
-#          env:
-#            ANDROID_KEYS_SECRET_PASSPHRASE: ${{ secrets.ANDROID_KEYS_SECRET_PASSPHRASE }}
-#        - name: Setup Flutter
-#          uses: subosito/flutter-action@v1
-#          with:
-#            flutter-version: 2.10.4
-#        - name: Run Flutter clean
-#          run: flutter clean
-#        - name: Install Flutter dependencies
-#          run: flutter pub get
-#          # Add build runner commands here if you have any
-#        - name: Build the app bundle
-#          run: flutter build appbundle --flavor prod --no-sound-null-safety
-
 
 jobs:
-  build_ios:
-    name: Build Flutter (iOS)
+  build:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
+      - name: Install Java
+        uses: actions/setup-java@v1
         with:
           java-version: '11'
-      - run: gem install cocoapods
-      - run: gem install bundler
-      - uses: subosito/flutter-action@v1
+
+      - name: Install Flutter
+        uses: subosito/flutter-action@v1
         with:
           flutter-version: 2.10.4
-      - run: flutter clean
-      - run: flutter pub get
-      - uses: maierj/fastlane-action@v1.4.0
-        with:
-          lane: beta
-          subdirectory: ios
+
+      - name: Install iOS Gems
+        working-directory: ${{ github.workspace }}/ios
+        run: bundle install
+
+      #on:
+      #  pull_request:
+      #    branches:
+      #      - "**"
+
+      #jobs:
+      #  #CI
+      #    build_android:
+      #      name: Building Android
+      #      runs-on: ubuntu-latest
+      #      steps:
+      #        - name: Checkout code
+      #          uses: actions/checkout@v2
+      #        - name: Setup Java
+      #          uses: actions/setup-java@v1
+      #          with:
+      #            java-version: 11
+      #        - name: Decrypt Android keys
+      #          run: sh ./.github/scripts/decrypt_android_secrets.sh
+      #          env:
+      #            ANDROID_KEYS_SECRET_PASSPHRASE: ${{ secrets.ANDROID_KEYS_SECRET_PASSPHRASE }}
+      #        - name: Setup Flutter
+      #          uses: subosito/flutter-action@v1
+      #          with:
+      #            flutter-version: 2.10.4
+      #        - name: Run Flutter clean
+      #          run: flutter clean
+      #        - name: Install Flutter dependencies
+      #          run: flutter pub get
+      #          # Add build runner commands here if you have any
+      #        - name: Build the app bundle
+      #          run: flutter build appbundle --flavor prod --no-sound-null-safety
+
+
+      #jobs:
+      #  build_ios:
+      #    name: Build Flutter (iOS)
+      #    runs-on: macos-latest
+      #    steps:
+      #      - uses: actions/checkout@v1
+      #      - uses: actions/setup-java@v1
+      #        with:
+      #          java-version: '11'
+      #      - run: gem install cocoapods
+      #      - run: gem install bundler
+      #      - uses: subosito/flutter-action@v1
+      #        with:
+      #          flutter-version: 2.10.4
+      #      - run: flutter clean
+      #      - run: flutter pub get
+      #      - uses: maierj/fastlane-action@v1.4.0
+      #        with:
+      #          lane: beta
+      #          subdirectory: ios
       #      - run: flutter build ios --release --no-codesign --flavor dev
       #      - name: Upload iPA
       #        uses: actions/upload-artifact@master
