--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -28,6 +28,12 @@ jobs:
         working-directory: ${{ github.workspace }}/ios
         run: bundle install
 
+      - name: Run Fastlane
+        uses: maierj/fastlane-action@v1.4.0
+        with:
+          lane: beta
+          subdirectory: ios
+
       #on:
       #  pull_request:
       #    branches:
