--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
-          lane: beta
+          lane: sync_all_development
           subdirectory: ios
 
       #on:
