--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -47,7 +47,7 @@ jobs:
           flutter-version: 2.10.4
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build ios --release --flavor staging --no-codesign
+      - run: flutter build ios --release --no-codesign
 
       #on:
       #  pull_request:
