--- a/.github/workflows/pre_release.yml
+++ b/.github/workflows/pre_release.yml
@@ -52,4 +52,18 @@ jobs:
             lane: closed_beta
             subdirectory: android
 
-
+#CI FOR IOS
+    build_ios:
+      name: Build Flutter (iOS)
+      runs-on: macos-latest
+      steps:
+        - uses: actions/checkout@v1
+        - uses: actions/setup-java@v1
+          with:
+            java-version: '11'
+        - uses: subosito/flutter-action@v1
+          with:
+            flutter-version: 2.10.4
+        - run: flutter pub get
+        - run: flutter clean
+        - run: flutter build ios --release --no-codesign
