--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
