--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -15,10 +15,10 @@ jobs:
       - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-#      - name: Install Ruby
-#        uses: ruby/setup-ruby@v1
-#        with:
-#          ruby-version: '2.7'
+      - name: Install Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
       - name: Install Java
         uses: actions/setup-java@v1
         with:
@@ -29,9 +29,9 @@ jobs:
         with:
           flutter-version: 2.10.4
 
-      - name: Install iOS Gems
-        working-directory: ${{ github.workspace }}/ios
-        run: bundle install
+#      - name: Install iOS Gems
+#        working-directory: ${{ github.workspace }}/ios
+#        run: bundle install
 
       - name: Run Fastlane
         uses: maierj/fastlane-action@v1.4.0
