--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
-          lane: bundle exec fastlane build_ipa
+          lane: build_ipa
           subdirectory: ios
 
 
