--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -10,12 +10,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '13.0'
       - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '13.0'
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -30,9 +30,9 @@ jobs:
         with:
           flutter-version: 2.10.4
 
-#      - name: Install iOS Gems
-#        working-directory: ${{ github.workspace }}/ios
-#        run: bundle install
+      - name: Install iOS Gems
+        working-directory: ${{ github.workspace }}/ios
+        run: bundle install
 
       - name: Run Fastlane
         uses: maierj/fastlane-action@v1.4.0
