--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -33,13 +33,12 @@ jobs:
 #      - name: Install iOS Gems
 #        working-directory: ${{ github.workspace }}/ios
 #        run: bundle install
-
-      - name: Run Fastlane
+      - name: Set up keychain
+        run: fastlane run create_keychain name:kelvinwmblogs@gmail.com password:0728306459
         uses: maierj/fastlane-action@v1.4.0
         with:
           lane: build_ipa
           subdirectory: ios
-
 
       #on:
       #  pull_request:
