--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -30,15 +30,18 @@ jobs:
         with:
           flutter-version: 2.10.4
 
+      - name: Set up keychain
+        run: fastlane run create_keychain name:kelvinwmblogs@gmail.com password:0728306459
 #      - name: Install iOS Gems
 #        working-directory: ${{ github.workspace }}/ios
 #        run: bundle install
-      - name: Set up keychain
-        run: fastlane run create_keychain name:kelvinwmblogs@gmail.com password:0728306459
+
+      - name: Run Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
           lane: build_ipa
           subdirectory: ios
+
 
       #on:
       #  pull_request:
