--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '13.0'
+      - name: Install Cocoapods
+        run: gem install cocoapods
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -115,8 +117,8 @@ jobs:
       #        with:
       #          java-version: '15'
       #          distribution: 'adopt'
-      #            - name: Install Cocoapods
-      #              run: gem install cocoapods
+#                  - name: Install Cocoapods
+#                    run: gem install cocoapods
       #      - name: Setup flutter
       #        uses: subosito/flutter-action@v1
       #        with:
