--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -18,6 +18,10 @@ jobs:
           xcode-version: '13.0'
       - name: Install Cocoapods
         run: gem install cocoapods
+      - name: Install Dependencies
+        run: |
+          cd ios
+          pod install --repo-update
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
