--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -16,12 +16,14 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '13.0'
+
       - name: Install Cocoapods
         run: gem install cocoapods
+
       - name: Install Dependencies
         run: |
           cd ios
-          pod install --repo-update
+          pod init && pod install --repo-update
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -35,9 +37,9 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           flutter-version: 2.10.4
-#      - name: Install iOS Gems
-#        working-directory: ${{ github.workspace }}/ios
-#        run: bundle install
+      #      - name: Install iOS Gems
+      #        working-directory: ${{ github.workspace }}/ios
+      #        run: bundle install
 
       - name: Run Fastlane
         uses: maierj/fastlane-action@v1.4.0
@@ -121,8 +123,8 @@ jobs:
       #        with:
       #          java-version: '15'
       #          distribution: 'adopt'
-#                  - name: Install Cocoapods
-#                    run: gem install cocoapods
+      #                  - name: Install Cocoapods
+      #                    run: gem install cocoapods
       #      - name: Setup flutter
       #        uses: subosito/flutter-action@v1
       #        with:
