--- a/.github/workflows/run_android_ci.yml
+++ b/.github/workflows/run_android_ci.yml
@@ -20,10 +20,6 @@ jobs:
       - name: Install Cocoapods
         run: gem install cocoapods
 
-      - name: Install Dependencies
-        run: |
-          cd ios
-          pod init && pod install --repo-update
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -37,6 +33,12 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           flutter-version: 2.10.4
+
+      - name: Install pub Dependencies
+        run: |
+          flutter pub get
+          cd ./ios && rm -f Podfile.lock && pod install --repo-update
+
       #      - name: Install iOS Gems
       #        working-directory: ${{ github.workspace }}/ios
       #        run: bundle install
